Spacing issues fixed

--- a/src/css sheets/global2.css
+++ b/src/css sheets/global2.css
@@ -27,13 +27,9 @@ html, body {
 
 }
 
-@media (max-width: 3000px) {
-  .bento-scale-wrapper {
-    transform: scale(0.95);
-  }
-  .bento-scale-wrapper2 {
-    transform: scale(0.95);
-  }
+@media (min-width: 1537px) {
+  .bento-scale-wrapper,
+  .bento-scale-wrapper2,
   .bento-scale-wrapper3 {
     transform: scale(0.95);
   }
@@ -41,12 +37,15 @@ html, body {
     margin: 0;
     background: rgb(1, 3, 33);
     color: white;             
-    height: 500vh;            
+    height: 415vh;            
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: flex-start; 
     overflow: hidden;
+  }
+  .scale-feature {
+    margin-top: 51.5em;
   }
 }
 
@@ -64,12 +63,15 @@ html, body {
     margin: 0;
     background: rgb(1, 3, 33);
     color: white;             
-    height: 415vh;            
+    height: 413vh;            
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: flex-start; 
     overflow: hidden;
+  }
+  .scale-feature {
+    margin-top: 54em;
   }
 }
 
@@ -93,16 +95,19 @@ html, body {
     margin: 0;
     background: rgb(1, 3, 33);
     color: white;             
-    height: 430vh;            
+    height: 413vh;            
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: flex-start; 
     overflow: hidden;
   }
+  .scale-feature {
+    margin-top: 54em;
+  }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1024px) {
   .bento-scale-wrapper {
     margin-left: -1.9em;
     transform: scale(0.85);
@@ -119,12 +124,15 @@ html, body {
     margin: 0;
     background: rgb(1, 3, 33);
     color: white;             
-    height: 540vh;         
+    height: 530vh;         
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: flex-start; 
     overflow: hidden;
+  }
+  .scale-feature {
+    margin-top: 61.5em;
   }
 }
 
@@ -157,12 +165,15 @@ html, body {
     margin: 0;
     background: rgb(1, 3, 33);
     color: white;             
-    height: 510vh;            
+    height: 495vh;            
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: flex-start; 
     overflow: hidden;
+  }
+  .scale-feature {
+    margin-top: 60.5em;
   }
 }
 
@@ -194,12 +205,15 @@ html, body {
     margin: 0;
     background: rgb(1, 3, 33);
     color: white;             
-    height: 500vh;            
+    height: 480vh;            
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: flex-start; /* instead of center */
     overflow: hidden;
+  }
+  .scale-feature {
+    margin-top: 60.3em;
   }
 }
 
@@ -244,12 +258,15 @@ html, body {
     margin: 0;
     background: rgb(1, 3, 33);
     color: white;             
-    height: 490vh;            
+    height: 443vh;            
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: flex-start; /* instead of center */
     overflow: hidden;
+  }
+  .scale-feature {
+    margin-top: 60.5em;
   }
 }
 
